trying to fix alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
     width: 100%;
     background-color: rgb(242, 241, 241);
     font-family: 'Inter';
+    justify-self: center;
+    justify-content: center;
+    overflow-x: hidden;
   }
 
   a {
@@ -107,7 +110,7 @@
       display: none;
     }
   }
-  @media (max-width: 1023px) and (min-width: 601px) {
+  @media (max-width: 1023px) and (min-width: 769px) {
     .header-container {
       width: 100%;
       height: 10vh;
@@ -294,7 +297,7 @@
       to {opacity: 1}
     }
   }
-  @media (max-width: 600px) {
+  @media (max-width: 768px) {
     .header-container {
       width: 100%;
       height: 6vh;
@@ -780,7 +783,7 @@
         width: 20vw;
       }
     }
-    @media (max-width: 1023px) and (min-width: 851px) {
+    @media (max-width: 1023px) and (min-width: 769px) {
       .home-annoucement-container {
         display: block;
         width: 80%;
@@ -830,7 +833,7 @@
         width: 20vw;
       }
     }
-    @media (max-width: 850px) {
+    @media (max-width: 768px) {
       .home-annoucement-container {
         display: block;
         width: 80%;
